Add jmx monitoring